--- a/faith.html
+++ b/faith.html
@@ -1,18 +1,19 @@
 <html>
 <body>
-<div>
+<div id="title">
 <h1>Welcome To Faith World</h1>
 <p>This is my first html webpage </p>
 <button onclick = makeDreamComeThrough()>click this button to explore</button>
 </div>
 </body>
 <style> 
-div {
-border: solid black 1px;
-width: 50%;
-height: 50%;
-margin: 15% auto;
-color: red
+#title {
+
+    color: white;
+    text-align: center;
+    padding: 200px;
+    background-position: center top;
+    background-image: url("https://images.unsplash.com/photo-1494500764479-0c8f2919a3d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGxhbmRzY2FwZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=600");
 
 }
 button:hover {
