Reorganized project structure

--- a/faith.html
+++ b/faith.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="./titlesection/titlesection.css">
+    </head>
 <body>
 <div id="title">
 <h1>Welcome To Faith World</h1>
@@ -6,29 +9,26 @@
 <button onclick = makeDreamComeThrough()>click this button to explore</button>
 </div>
 </body>
-<style> 
-#title {
+</html> 
 
-    color: white;
-    text-align: center;
-    padding: 200px;
+<style> 
+
+body {
+
     background-position: center top;
     background-image: url("https://images.unsplash.com/photo-1494500764479-0c8f2919a3d8?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGxhbmRzY2FwZXxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&q=60&w=600");
-
+    background-size: cover;
 }
-button:hover {
-color: blue;
-font-size: 20px;
-cursor: pointer;
 
-
-}
+    
 </style>
+
 <script>
 function makeDreamComeThrough() {
 alert("Hurray!!! Dream Came Through")
-
+document.body.style.backgroundImage = 'url("https://i.pinimg.com/originals/fe/2f/3e/fe2f3ea1aa70a8baa65b93f2468f42f0.gif")'
 } 
 
 </script>
 </html>
+ 
