added css and html comment

--- a/faith.html
+++ b/faith.html
@@ -3,6 +3,7 @@
         <link rel="stylesheet" href="./titlesection/titlesection.css">
     </head>
 <body>
+    <!--this is a comment-->
 <div id="title">
 <h1>Welcome To Faith World</h1>
 <p>This is my first html webpage </p>
