change main section class

--- a/faith.html
+++ b/faith.html
@@ -3,12 +3,14 @@
         <link rel="stylesheet" href="./titlesection/titlesection.css">
     </head>
 <body>
-    <!--this is a comment-->
-<div id="title">
+
+<div class="main-section"id= "title">
 <h1>Welcome To Faith World</h1>
 <p>This is my first html webpage </p>
 <button onclick = makeDreamComeThrough()>click this button to explore</button>
 </div>
+
+
 </body>
 </html> 
 
@@ -21,6 +23,10 @@ body {
     background-size: cover;
 }
 
+.main-section {
+    border: solid white 1px;
+
+}
     
 </style>
 
