--- a/faith.html
+++ b/faith.html
@@ -10,7 +10,6 @@
 <button onclick = makeDreamComeThrough()>click this button to explore</button>
 </div>
 
-
 </body>
 </html> 
 
@@ -25,6 +24,8 @@ body {
 
 .main-section {
     border: solid white 1px;
+     width: 100vw;
+     height: 100vw;
 
 }
     
