--- a/faith.html
+++ b/faith.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="./titlesection/titlesection.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Armata">
+
     </head>
 <body>
 
@@ -17,6 +19,7 @@
 
 * {
   box-sizing: border-box;
+  font-family: 'Armata';
 }
 
 html, body {
