Added title section color variable

--- a/faith.html
+++ b/faith.html
@@ -9,7 +9,7 @@
 <div class="main-section" id= "title">
 <h1>Welcome To Faith World</h1>
 <p>This is my first html webpage </p>
-<button onclick = makeDreamComeThrough()>click this button to explore</button>
+<button class="title-section-button" onclick = makeDreamComeThrough()>click this button to explore</button>
 </div>
 
 </body>
