Enhanced white space distribution

--- a/faith.html
+++ b/faith.html
@@ -7,9 +7,9 @@
 <body>
 
 <div class="main-section" id= "title">
-<h1>Welcome To Faith World</h1>
-<p>This is my first html webpage </p>
-<button class="title-section-button" onclick = makeDreamComeThrough()>click this button to explore</button>
+<h1 class="title-section-header">Faith Ekata </h1>
+<p class="title-section-subtitle">Empowering Individuals Through Education </p>
+<button class="title-section-button" onclick = makeDreamComeThrough()>combine knowledge with action</button>
 </div>
 
 </body>
@@ -35,7 +35,8 @@ html, body {
      width: 100vw;
      height: 100vw;
      background-position: center top;
-    background-size: cover;
+     background-size: cover;
+     padding: 25px;
 
 
 }
@@ -44,7 +45,7 @@ html, body {
 
 <script>
 function makeDreamComeThrough() {
-alert("Hurray!!! Dream Came Through")
+//alert("Hurray!!! Dream Came Through")
 document.body.style.backgroundImage = 'url("https://i.pinimg.com/originals/fe/2f/3e/fe2f3ea1aa70a8baa65b93f2468f42f0.gif")'
 } 
 
