Added Css media rule for thinner screen

--- a/faith.html
+++ b/faith.html
@@ -47,9 +47,13 @@ html, body {
      background-size: cover;
      padding: 25px;
 
-
 }
-    
+@media screen and (max-width: 500px) {
+  .text-block-container{
+    width: 100%;
+    margin: 0 auto;
+  }
+}
 </style>
 
 <script>
