Added icons  to aboutme Section

--- a/faith.html
+++ b/faith.html
@@ -1,27 +1,33 @@
 <html>
+  <body>
     <head>
-        <link rel="stylesheet" href="./titlesection/titlesection.css">
-        <link rel="stylesheet" href="./aboutmesection/aboutmesection.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Armata">
-</head>
-<body>
-
-<div class="main-section" id="title">
-<h1 class="title-section-header">Faith Ekata</h1>
-<p class="title-section-subtitle">Empowering Individuals Through Education</p>
-<button class="title-section-button" onclick = makeDreamComeThrough()>COMBINE KNOWLEDGE WITH ACTION</button>
-</div>
-<div class="misc-section" id="aboutme">
-   <div class="text-block-container">
-  <h1>About Me</h1>  
-  <p class="aboutme-section-description">I am a Geophysics graduate and i am currently learning how to become a full stack engineer on simvo.
-     I will not only learn how to code but also understand how web applications work from start to finish. 
-     I want to be able to debug issues, solve technical challenges, and build entire applications through the end-to-end process.
-      This career path excites me because it combines creativity with problem-solving, giving me the tools to transform ideas into real solutions.
-  </p>
+      <link rel = "stylesheet" href = "./titlesection/titlesection.css">
+      <link rel = "stylesheet" href = "./aboutmesection/aboutmesection.css">
+      <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Armata">
+      <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    </head>
+    <div class = "main-section" id = "title">
+      <h1 class = "title-section-header">Faith Ekata</h1>
+      <p class = "title-section-subtitle">Empowering Individuals Through Education</p>
+      <button class = "title-section-button" onclick = makeDreamComeThrough()>COMBINE KNOWLEDGE WITH ACTION</button>
     </div>
-</div>
-</body>
+    <div class = "misc-section" id = "aboutme">
+      <div class = "text-block-container">
+        <h1> About Me</h1> 
+        <p class = "aboutme-section-description">I am a Geophysics graduate and i am currently learning how to become a full stack engineer on simvo.
+          I will not only learn how to code but also understand how web applications work from start to finish. 
+          I want to be able to debug issues, solve technical challenges, and build entire applications through the end-to-end process.
+          This career path excites me because it combines creativity with problem-solving, giving me the tools to transform ideas into real solutions.
+        </p>
+        <div class = "aboutme-icons">
+          <i class = "aboutme-icon fa-brands fa-facebook"></i>
+          <i class = "aboutme-icon fa-brands fa-instagram"></i>
+          <i class = "aboutme-icon fa-brands fa-linkedin"></i>
+          <i class = "aboutme-icon fa-solid fa-envelope"></i>
+        </div>
+      </div>
+    </div>
+  </body>
 </html> 
 
 <style> 
