Added Links To Icons And CV Download

--- a/faith.html
+++ b/faith.html
@@ -20,10 +20,13 @@
           This career path excites me because it combines creativity with problem-solving, giving me the tools to transform ideas into real solutions.
         </p>
         <div class = "aboutme-icons">
-          <i class = "aboutme-icon fa-brands fa-facebook"></i>
-          <i class = "aboutme-icon fa-brands fa-instagram"></i>
-          <i class = "aboutme-icon fa-brands fa-linkedin"></i>
-          <i class = "aboutme-icon fa-solid fa-envelope"></i>
+          <a href = "https://github.com/olkalemwenfaith26" target = "_blank"><i class="aboutme-icon fa-brands fa-square-github"></i>
+          <a href = "https://x.com/0xfaith_E" target = "_blank"><i class="aboutme-icon fa-brands fa-x-twitter"></i></a>
+          <a href = "https://www.linkedin.com/in/faith-olkalemwen-409166231/" target="_blank"><i class = "aboutme-icon fa-brands fa-linkedin"></i></a>
+          <a href = "mailto:olkalemwenfaith26@gmail.com" target = " _blank"><i class = "aboutme-icon fa-solid fa-envelope"></i></a>
+        </div>
+        <div class="aboutme-download-link">
+         <a href = "./aboutmesection/Olkalemwen Faith Resume.pdf" target = "_blank" download>Download My CV</a>
         </div>
       </div>
     </div>
