created crapsgame space

--- a/faith.html
+++ b/faith.html
@@ -3,8 +3,9 @@
     <head>
       <link rel = "stylesheet" href = "./titlesection/titlesection.css">
       <link rel = "stylesheet" href = "./aboutmesection/aboutmesection.css">
+      <link rel = "stylesheet" href = "./crapsgame/crapsgame.css">
       <link rel = "stylesheet" href = "https://fonts.googleapis.com/css2?family=Armata">
-      <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+      <link rel = "stylesheet" href = "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">  
     </head>
     <div class = "main-section" id = "title">
       <h1 class = "title-section-header">Faith Ekata</h1>
@@ -30,6 +31,15 @@
         </div>
       </div>
     </div>
+    <div class = "main-section" id="craps-game">
+      <h1 class ="craps-game-title">Craps Casino Game</h1>
+      <div class = "craps-game-container">
+        
+      </div>
+    </div>
+    
+
+  
   </body>
 </html> 
 
