Created craps game js module

--- a/faith.html
+++ b/faith.html
@@ -34,7 +34,7 @@
     <div class = "main-section" id="craps-game">
       <h1 class ="craps-game-title">Craps Casino Game</h1>
       <div class = "craps-game-container">
-        <div class = "craps-registration-pane">
+        <div id = "craps-registration-pane">
           <div>
             Enter Username to begin
             <div>
@@ -44,6 +44,9 @@
               </div>
             </div>
           </div>
+        </div>
+        <div id ="craps-main-section">
+          MAIN SECTION HERE
         </div>
       </div>
     </div>
@@ -84,16 +87,14 @@ html, body {
   }
 }
 </style>
-
+<script src="./crapsgame/crapsgame.js"></script>
 <script>
 function makeDreamComeThrough() {
   //alert("Hurray!!! Dream Came Through")
   document.body.style.backgroundImage = 'url("https://i.pinimg.com/originals/fe/2f/3e/fe2f3ea1aa70a8baa65b93f2468f42f0.gif")'
+  document.getElementById("title").style.visibility = "hidden"
 } 
 
-function registerCrapsPlayer() {
- let crapsUsername = document.getElementById("craps-username-input").value
-}
 
 </script>
 </html>
