Added craps games stats section

--- a/faith.html
+++ b/faith.html
@@ -46,7 +46,17 @@
           </div>
         </div>
         <div id ="craps-main-section">
-          MAIN SECTION HERE
+          <div class = "craps-main-section-stats">
+           <div>
+              Welcome, <span id = "craps-stats-username"></span>
+           </div>
+            <div id = "craps-stats-money-container">
+              $<span id = "craps-stats-money"></span>
+            </div> 
+            <div>
+              Round:<span id ="craps-stats-rounds"></span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
