positioned round manager pane to bottom of game box

--- a/faith.html
+++ b/faith.html
@@ -57,6 +57,9 @@
               Round:<span id ="craps-stats-rounds"></span>
             </div>
           </div>
+          <div class="craps-round-manager">
+            ROUND SETUP PANE HERE
+          </div>
         </div>
       </div>
     </div>
