--- a/faith.html
+++ b/faith.html
@@ -58,7 +58,17 @@
             </div>
           </div>
           <div class="craps-round-manager">
-            ROUND SETUP PANE HERE
+            <div id="EVEN" onclick = "betEven ()">
+              EVEN
+            </div>
+            <div id="ODD" onclick = "betOdd ()">
+              ODD
+            </div>
+            <div>
+              <span onclick="decreaseBet()">-</span>
+              <span id="craps-user-bet-amount">$100</span>
+              <span onclick="increaseBet()">+</span>
+            </div>
           </div>
         </div>
       </div>
