--- a/faith.html
+++ b/faith.html
@@ -57,17 +57,23 @@
               Round:<span id ="craps-stats-rounds"></span>
             </div>
           </div>
+          <div class="craps-on-table-container">
+            <div id="craps-roll-dice-button" class="craps-roll-dice-container no-select" onclick="rollDice()">Roll Dice <i class="fa-solid fa-dice"></i></div>
+            <div id="craps-roll-dice-animation-container"></div>
+          </div>
           <div class="craps-round-manager">
-            <div id="EVEN" onclick = "betEven ()">
-              EVEN
-            </div>
-            <div id="ODD" onclick = "betOdd ()">
-              ODD
-            </div>
-            <div>
-              <span onclick="decreaseBet()">-</span>
-              <span id="craps-user-bet-amount">$100</span>
-              <span onclick="increaseBet()">+</span>
+            <div class="craps-betting-grid">
+              <div class="craps-bet-button" id="EVEN" onclick = "betEven ()">
+                EVEN
+              </div>
+              <div class="craps-bet-amount-container">
+                <span class="craps-user-bet-amount-change" onclick="decreaseBet()">-</span>
+                <span id="craps-user-bet-amount">$100</span>
+                <span class="craps-user-bet-amount-change" onclick="increaseBet()">+</span>
+              </div>
+              <div  class="craps-bet-button" id="ODD" onclick = "betOdd ()">
+                ODD
+              </div>
             </div>
           </div>
         </div>
@@ -111,6 +117,7 @@ html, body {
 }
 </style>
 <script src="./crapsgame/crapsgame.js"></script>
+<script type="text/javascript" src="https://unpkg.com/roll-a-die@2.0.1/dist/roll-a-die.js"></script>
 <script>
 function makeDreamComeThrough() {
   //alert("Hurray!!! Dream Came Through")
